--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^4.4.1",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "autoprefixer": "^10.4.16",
+        "maska": "^2.1.10",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
+        "vite-plugin-static-copy": "^0.17.0",
         "vue-axios": "^3.5.2",
         "vue-router": "^4.2.5"
     }
