--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "autoprefixer": "^10.4.16",
         "maska": "^2.1.10",
+        "moment": "^2.29.4",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5",
         "vite-plugin-static-copy": "^0.17.0",
